# quadprog

./: CMakeLists.txt  README  README.md
include/: CMakeLists.txt
pkg-config/: CMakeLists.txt
src/: CMakeLists.txt
